@@ -1,3 +1,9 @@
+== 12 Mar 2016 ==
+
+gperftools 2.5 is out!
+
+Just single bugfix was merged after rc2. Which was fix for issue #777.
+
 == 5 Mar 2016 ==
 
 gperftools 2.5rc2 is out!
